[package]
name = "engine"
version = "0.0.0"
edition = "2024"

[dependencies]
log = { workspace = true }
indexmap = { workspace = true }
sdl2-sys = { workspace = true }
sdl2 = { workspace = true }

common = { path = "../common" }
physics = { path = "../physics" }
input = { path = "../input" }
sound = { path = "../sound" }
render = { path = "../render" }
